--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,19 @@
 <html>
 
 <head>
+    <!-- these libraries may have newer versions -->
     <meta charset="UTF-8/">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <!-- All React apps require some element that exists in your website that it can attach to -->
+    <div id="app"></div>
+
+    <!-- The src tells the app where to look for the script commands -->
+    <script type="text/babel" src="app.jsx"> </script>
 </body>
 
 </html>
